Omnifood Project 10 - Meals Section 2 - style the first two columns and fix the border-radius img problem with overflow hidden

--- a/omnifood/css/style.css
+++ b/omnifood/css/style.css
@@ -210,8 +210,47 @@
     padding: 9.6rem 0;
 }
 
+.meal {
+    box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
+    border-radius: 11px;
+    overflow: hidden;
+}
+
 .meal-img {
     width: 100%;
+}
+
+.meal-content {
+    padding: 3.2rem 4.8rem 4.8rem 4.8rem;
+}
+
+.meal-tags {
+    margin-bottom: 1.2rem;
+
+    display: flex;
+    gap: 0.4rem;
+}
+
+.tag {
+    display: inline-block;
+    padding: 0.4rem 0.8rem;
+    font-size: 1.2rem;
+    text-transform: uppercase;
+    color: #333333;
+    font-weight: 600;
+    border-radius: 100px;
+}
+
+.tag--vegetarian {
+    background-color: #51cf66;
+}
+
+.tag--vegan {
+    background-color: #94d82d;
+}
+
+.tag--paleo {
+    background-color: #ffd43b;
 }
 
 .meal-title {
@@ -223,6 +262,7 @@
 
 .meal-attributes {
     list-style: none;
+
     display: flex;
     flex-direction: column;
     gap: 2rem;
@@ -230,4 +270,14 @@
 
 .meal-attribute {
     font-size: 1.8rem;
+
+    display: flex;
+    align-items: center;
+    gap: 1.6rem;
+}
+
+.meal-icon {
+    width: 2.4rem;
+    height: 2.4rem;
+    color: #e67e22;
 }
